new chat search bug fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -163,6 +163,7 @@
         <br>
         <center><img src="/static/logo.png" style="height:50px;margin-bottom:14px"></center>
         <center>This website was entirely made by <a href="https://github.com/karimk123" target="_blank">karim</a></center>
+        <center>And debugged by <a href="https://github.com/notkar1m" target="_blank">kar1m</a></center>
         <br>
         <br>
       </p>
