--- a/static/css/index.css
+++ b/static/css/index.css
@@ -358,6 +358,9 @@ body {
 	font-weight: 500;
 	font-size: 23px;
 	text-align: center;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .item-listing p { /*price*/
