heartbreak for no fav

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -71,7 +71,12 @@
     {%endif%}
 
       </div>
+
+{%if favListings%}
 <h2>Favorites ❤️</h2>
+{%else%}
+<h2>Favorites 💔</h2>
+{%endif%}
   <hr>
 
   	<div id="search-res">
